<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFrag">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200">

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/flip_card_game"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="30sp"/>


        <include
            android:id="@+id/game_views"
            layout="@layout/card_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameTitle" />


        <LinearLayout
            android:id="@+id/gameResult"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="327dp"
            android:layout_marginBottom="16dp"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/revealButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reveal_btn"/>

            <Button
                android:id="@+id/homeButton"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_btn"/>

            <TextView
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/points"
                android:textSize="20sp" />



        </LinearLayout>

    </RelativeLayout>

</FrameLayout>