<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@color/purple_200">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/titleAndButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/title_shape"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:text="@string/result"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="36sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/scoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:text="Points :"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Time :"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accuracyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="25dp"
                android:text="@string/accuracy"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_below="@id/titleAndButton"
            android:layout_marginStart="80dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="80dp"
            android:src="@drawable/card" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:text="@string/retry" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="25dp"
            android:text="@string/return_to_title" />

    </LinearLayout>

</RelativeLayout>