<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/titleAndButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/title_shape"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projectTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/project_presentation"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gameMainTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/flip_card_game"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="44sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="80dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/start_game" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="80dp"
                android:src="@drawable/card" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>